main.scss
$color: black;
$header-background-color: #AA0;
$toplevel-padding: 20px;
body {
background-color: $color;

/* Scrollbar behaviour.
 * We would like to get rid of the X scrollbar and keep only the Y one.
 * The below would remove both on Chromium 81 and neither on Firefox 75.
 * So for now we just keep both.
 * https://stackoverflow.com/questions/3296644/hiding-the-scroll-bar-on-an-html-page
 * https://stackoverflow.com/questions/20997183/how-to-hide-scrollbar-in-firefox
 * https://stackoverflow.com/questions/20713769/horizontal-only-webkit-scrollbar-style-css
 */
/*
overflow-x: visible;
scrollbar-width: none;
&::-webkit-scrollbar {
    display: none;
}
*/

header, footer {
  background-color: $header-background-color;
}
header {
  $font-size: 32px;
  align-items: center;
  white-space: nowrap;
  /* https://stackoverflow.com/questions/5078239/how-do-i-remove-the-space-between-inline-block-elements */
  font-size: 0;
  height: $font-size * 1.2;
  display: flex;
  a {
    /* Make buttons occupy the full height of the header bar.
     * https://stackoverflow.com/questions/28254332/how-to-vertically-center-the-contents-of-a-flexbox-item/28254903#28254903 */
    align-items: center;
    align-self: stretch;
    display: flex;
    color: $color;
    font-size: 32px;
    font-weight: bold;
    margin-left: 0;
    margin-right: 0;
    padding-left: 10px;
    &:first-child {
      padding-left: $toplevel-padding;
    }
    padding-right: 10px;
    text-decoration: none;
    &:visited {
      color: $color;
    }
    &:hover {
      color: $header-background-color;
      background-color: $color;
    }
    &.font-awesome-container {
      font-size: 28px;
      font-weight: normal;
      padding-left: 5px;
      padding-right: 5px;
    }
  }
}
footer {
  a {
    $color: #00C;
    color: $color;
    text-decoration: none;
    &:visited {
      color: $color;
    }
    &:hover {
      text-decoration: underline;
    }
  }
  padding: 10px $toplevel-padding;
  div + div {
    margin-top: 5px;
  }
}
}

